maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:34: error: illegal start of statement
		while(!estFaceMur){ avance(); ]}
                                              ^